# rag_pipeline

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
eval/: evaluate.py  golden_questions.json
prompts/: system_prompt.txt
src/rag_pipeline/: __init__.py  app.py  config.py  embeddings.py  generator.py  ingest.py  pipeline.py  retriever.py  vectorstore.py
tests/: test_embeddings.py  test_generator.py  test_ingest.py  test_retriever.py  test_vectorstore.py
