[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Modular RAG pipeline with evaluation harness"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "openai>=1.0",
    "anthropic>=0.40",
    "faiss-cpu==1.9.0.post1",   # 1.10+ dropped the macOS 12 x86_64 wheel
    "fastembed>=0.3",           # default embedding provider (ONNX, no torch required)
    "onnxruntime<=1.19.0",      # 1.20+ dropped macOS 12 x86_64; 1.19 has universal2 wheel
    "ragas>=0.2",
    "streamlit>=1.35",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# pip install "rag-pipeline[sentence-transformers]" — HuggingFace models via torch
sentence-transformers = [
    "sentence-transformers>=3.0",
    "langchain-huggingface>=0.1",
]
# pip install "rag-pipeline[google]" — Gemini LLM support
google = ["langchain-google-genai>=2.0"]
# pip install "rag-pipeline[all]" — everything
all = ["rag-pipeline[sentence-transformers,google]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_pipeline"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
